
  Closes #3370

* The ``--jobs`` parameter now fallbacks to 1 if the host operating system does not
  have functioning shared semaphore implementation.

  Closes #5216

* Fix crash for ``unused-private-member`` when checking private members on ``__class__``

  Closes #5261

* Crashes when a list is encountered in a toml configuration do not happen anymore.

  Closes #4580

* A new ``bad-configuration-section`` checker was added that will emit for misplaced option
  in pylint's top level namespace for toml configuration. Top-level dictionaries or option defined
  in the wrong section will still silently not be taken into account, which is tracked in a
  follow-up issue.

  Follow-up in #5259

* Added new checker ``useless-with-lock`` to find incorrect usage of with statement and threading module locks.
  Emitted when ``with threading.Lock():`` is used instead of ``with lock_instance:``.

  Closes #5208

* Make yn validator case insensitive, to allow for ``True`` and ``False`` in config files.


What's New in Pylint 2.11.2?
============================
Release date: TBA

..
  Put bug fixes that should not wait for a new minor version here

* Pyreverse - Add the project root directory to sys.path

  Closes #2479

* Don't emit ``consider-using-f-string`` if ``py-version`` is set to Python < ``3.6``.
  ``f-strings`` were added in Python ``3.6``

  Closes #5019

* Fix regression for ``unspecified-encoding`` with ``pathlib.Path.read_text()``

  Closes #5029

* Don't emit ``consider-using-f-string`` if the variables to be interpolated include a backslash

* Fixed false positive for ``cell-var-from-loop`` when variable is used as the default
  value for a keyword-only parameter.

  Closes #5012

* Fix false-positive ``undefined-variable`` with ``Lambda``, ``IfExp``, and
  assignment expression.

* Fix false-positive ``useless-suppression`` for ``wrong-import-order``

  Closes #2366

* Fixed ``toml`` dependency issue

  Closes #5066
