@@ -1,4 +1,4 @@
-# pylint:disable=pointless-string-statement, fixme, misplaced-comparison-constant, comparison-with-itself
+# pylint:disable=pointless-string-statement, fixme, comparison-with-itself
 """Stray backslash escapes may be missing a raw-string prefix."""
 # pylint: disable=redundant-u-string-prefix
 
